[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/BoardImage.gd" type="Script" id=1]
[ext_resource path="res://Scripts/CardExaminer.gd" type="Script" id=2]
[ext_resource path="res://Scenes/SupportScenes/BigCard.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Playmat/BoardImage.png" type="Texture" id=4]
[ext_resource path="res://Assets/Playmat/Large Empty Slot.png" type="Texture" id=5]
[ext_resource path="res://Assets/Playmat/Switch Button.png" type="Texture" id=6]

[node name="Node2D" type="Node2D"]

[node name="BoardImage" type="Sprite" parent="."]
position = Vector2( 0, -648 )
texture = ExtResource( 4 )
centered = false
script = ExtResource( 1 )

[node name="CardSpots" type="Control" parent="BoardImage"]
margin_left = 974.0
margin_top = 243.0
margin_right = 1866.0
margin_bottom = 1486.0
rect_pivot_offset = Vector2( 446, 621 )

[node name="BHandScroller" type="ScrollContainer" parent="BoardImage/CardSpots"]
margin_left = 33.0
margin_top = -220.0
margin_right = 868.0
margin_bottom = -20.0
follow_focus = true
scroll_vertical_enabled = false

[node name="BHand" type="HBoxContainer" parent="BoardImage/CardSpots/BHandScroller"]
rect_pivot_offset = Vector2( 317, 100 )
focus_neighbour_top = NodePath("../../NonHands/BTrap1")
focus_neighbour_bottom = NodePath("../../NonHands/BAttacker")

[node name="WHandScroller" type="ScrollContainer" parent="BoardImage/CardSpots"]
margin_left = 33.0
margin_top = 1258.0
margin_right = 863.0
margin_bottom = 1458.0
follow_focus = true
scroll_vertical_enabled = false

[node name="WHand" type="HBoxContainer" parent="BoardImage/CardSpots/WHandScroller"]
rect_pivot_offset = Vector2( 317, 100 )
focus_neighbour_top = NodePath("../../NonHands/WTrap1")
focus_neighbour_bottom = NodePath("../../NonHands/WAttacker")

[node name="NonHands" type="Control" parent="BoardImage/CardSpots"]
margin_right = 892.0
margin_bottom = 1238.0

[node name="WAttacker" type="Button" parent="BoardImage/CardSpots/NonHands"]
margin_left = 386.0
margin_top = 646.0
margin_right = 506.0
margin_bottom = 826.0
focus_neighbour_left = NodePath("../WEquip1")
focus_neighbour_top = NodePath("../BAttacker")
focus_neighbour_right = NodePath("../WEquip2")
focus_neighbour_bottom = NodePath("../WR2")
focus_next = NodePath("../WEquip2")
focus_previous = NodePath("../WEquip1")
flat = true

[node name="WEquip1" type="Button" parent="BoardImage/CardSpots/NonHands"]
margin_left = 242.0
margin_top = 646.0
margin_right = 362.0
margin_bottom = 826.0
focus_neighbour_left = NodePath("../WBanished")
focus_neighbour_top = NodePath("../BEquip2")
focus_neighbour_right = NodePath("../WAttacker")
focus_neighbour_bottom = NodePath("../WR1")
focus_next = NodePath("../WAttacker")
focus_previous = NodePath("../WBanished")
flat = true

[node name="WEquip2" type="Button" parent="BoardImage/CardSpots/NonHands"]
margin_left = 530.0
margin_top = 646.0
margin_right = 650.0
margin_bottom = 826.0
focus_neighbour_left = NodePath("../WAttacker")
focus_neighbour_top = NodePath("../BEquip1")
focus_neighbour_right = NodePath("../WGraveyard")
focus_neighbour_bottom = NodePath("../WR3")
focus_next = NodePath("../WGraveyard")
focus_previous = NodePath("../WAttacker")
flat = true

[node name="WR1" type="Button" parent="BoardImage/CardSpots/NonHands"]
margin_left = 242.0
margin_top = 850.0
margin_right = 362.0
margin_bottom = 1030.0
focus_neighbour_left = NodePath("../WTech")
focus_neighbour_top = NodePath("../WEquip1")
focus_neighbour_right = NodePath("../WR2")
focus_neighbour_bottom = NodePath("../WTrap1")
focus_next = NodePath("../WR2")
focus_previous = NodePath("../WTech")
flat = true

[node name="WR2" type="Button" parent="BoardImage/CardSpots/NonHands"]
margin_left = 386.0
margin_top = 850.0
margin_right = 506.0
margin_bottom = 1030.0
focus_neighbour_left = NodePath("../WR1")
focus_neighbour_top = NodePath("../WAttacker")
focus_neighbour_right = NodePath("../WR3")
focus_neighbour_bottom = NodePath("../WTrap2")
focus_next = NodePath("../WR3")
focus_previous = NodePath("../WR1")
flat = true

[node name="WR3" type="Button" parent="BoardImage/CardSpots/NonHands"]
margin_left = 530.0
margin_top = 850.0
margin_right = 650.0
margin_bottom = 1030.0
focus_neighbour_left = NodePath("../WR2")
focus_neighbour_top = NodePath("../WEquip2")
focus_neighbour_right = NodePath("../WMedBay")
focus_neighbour_bottom = NodePath("../WTrap3")
focus_next = NodePath("../WMedBay")
focus_previous = NodePath("../WR2")
flat = true

[node name="WTrap1" type="Button" parent="BoardImage/CardSpots/NonHands"]
margin_left = 242.0
margin_top = 1051.0
margin_right = 362.0
margin_bottom = 1231.0
focus_neighbour_left = NodePath("../WTechDeck")
focus_neighbour_top = NodePath("../WR1")
focus_neighbour_right = NodePath("../WTrap2")
focus_neighbour_bottom = NodePath("../../WHandScroller/WHand")
focus_next = NodePath("../WTrap2")
focus_previous = NodePath("../WTechDeck")
flat = true

[node name="WTrap2" type="Button" parent="BoardImage/CardSpots/NonHands"]
margin_left = 386.0
margin_top = 1051.0
margin_right = 506.0
margin_bottom = 1231.0
focus_neighbour_left = NodePath("../WTrap1")
focus_neighbour_top = NodePath("../WR2")
focus_neighbour_right = NodePath("../WTrap3")
focus_neighbour_bottom = NodePath("../../WHandScroller/WHand")
focus_next = NodePath("../WTrap3")
focus_previous = NodePath("../WTrap1")
flat = true

[node name="WTrap3" type="Button" parent="BoardImage/CardSpots/NonHands"]
margin_left = 530.0
margin_top = 1051.0
margin_right = 650.0
margin_bottom = 1231.0
focus_neighbour_left = NodePath("../WTrap2")
focus_neighbour_top = NodePath("../WR3")
focus_neighbour_right = NodePath("../WMainDeck")
focus_neighbour_bottom = NodePath("../../WHandScroller/WHand")
focus_next = NodePath("../WMainDeck")
focus_previous = NodePath("../WTrap2")
flat = true

[node name="WTech" type="Button" parent="BoardImage/CardSpots/NonHands"]
margin_left = 31.0
margin_top = 850.0
margin_right = 151.0
margin_bottom = 1030.0
focus_neighbour_left = NodePath("../WGraveyard")
focus_neighbour_top = NodePath("../WBanished")
focus_neighbour_right = NodePath("../WR1")
focus_neighbour_bottom = NodePath("../WTechDeck")
focus_next = NodePath("../WR1")
focus_previous = NodePath("../WGraveyard")
flat = true

[node name="WTechDeck" type="Button" parent="BoardImage/CardSpots/NonHands"]
margin_left = 31.0
margin_top = 1051.0
margin_right = 151.0
margin_bottom = 1231.0
focus_neighbour_left = NodePath("../WMedBay")
focus_neighbour_top = NodePath("../WTech")
focus_neighbour_right = NodePath("../WTrap1")
focus_neighbour_bottom = NodePath("../../WHandScroller/WHand")
focus_next = NodePath("../WTrap1")
focus_previous = NodePath("../WMedBay")
flat = true

[node name="WMedBay" type="Button" parent="BoardImage/CardSpots/NonHands"]
margin_left = 741.0
margin_top = 850.0
margin_right = 861.0
margin_bottom = 1030.0
focus_neighbour_left = NodePath("../WR3")
focus_neighbour_top = NodePath("../WGraveyard")
focus_neighbour_right = NodePath("../../../../BoardScroller")
focus_neighbour_bottom = NodePath("../WMainDeck")
focus_next = NodePath("../WTechDeck")
focus_previous = NodePath("../WR3")
flat = true

[node name="WMainDeck" type="Button" parent="BoardImage/CardSpots/NonHands"]
margin_left = 741.0
margin_top = 1051.0
margin_right = 861.0
margin_bottom = 1231.0
focus_neighbour_left = NodePath("../WTrap3")
focus_neighbour_top = NodePath("../WMedBay")
focus_neighbour_right = NodePath("../../../../BoardScroller")
focus_neighbour_bottom = NodePath("../../WHandScroller/WHand")
focus_next = NodePath("../BMainDeck")
focus_previous = NodePath("../WTrap3")
flat = true

[node name="WBanished" type="Button" parent="BoardImage/CardSpots/NonHands"]
margin_left = 32.0
margin_top = 647.0
margin_right = 152.0
margin_bottom = 827.0
rect_rotation = -90.0
rect_pivot_offset = Vector2( 60, 90 )
focus_neighbour_left = NodePath("../BBanished")
focus_neighbour_top = NodePath("../BGraveyard")
focus_neighbour_right = NodePath("../WEquip1")
focus_neighbour_bottom = NodePath("../WTech")
focus_next = NodePath("../WEquip1")
focus_previous = NodePath("../BBanished")
flat = true

[node name="WGraveyard" type="Button" parent="BoardImage/CardSpots/NonHands"]
margin_left = 742.0
margin_top = 647.0
margin_right = 862.0
margin_bottom = 827.0
rect_rotation = 90.0
rect_pivot_offset = Vector2( 60, 90 )
focus_neighbour_left = NodePath("../WEquip2")
focus_neighbour_top = NodePath("../BBanished")
focus_neighbour_right = NodePath("../../../../BoardScroller")
focus_neighbour_bottom = NodePath("../WMedBay")
focus_next = NodePath("../WTech")
focus_previous = NodePath("../WEquip2")
flat = true

[node name="BAttacker" type="Button" parent="BoardImage/CardSpots/NonHands"]
margin_left = 385.0
margin_top = 410.0
margin_right = 505.0
margin_bottom = 590.0
rect_rotation = 180.0
rect_pivot_offset = Vector2( 60, 90 )
focus_neighbour_left = NodePath("../BEquip1")
focus_neighbour_top = NodePath("../WAttacker")
focus_neighbour_right = NodePath("../BEquip2")
focus_neighbour_bottom = NodePath("../BR2")
focus_next = NodePath("../BEquip2")
focus_previous = NodePath("../BEquip1")
flat = true

[node name="BEquip1" type="Button" parent="BoardImage/CardSpots/NonHands"]
margin_left = 529.0
margin_top = 410.0
margin_right = 649.0
margin_bottom = 590.0
rect_rotation = 180.0
rect_pivot_offset = Vector2( 60, 90 )
focus_neighbour_left = NodePath("../BBanished")
focus_neighbour_top = NodePath("../WEquip2")
focus_neighbour_right = NodePath("../BAttacker")
focus_neighbour_bottom = NodePath("../BR1")
focus_next = NodePath("../BAttacker")
focus_previous = NodePath("../BBanished")
flat = true

[node name="BEquip2" type="Button" parent="BoardImage/CardSpots/NonHands"]
margin_left = 242.0
margin_top = 410.0
margin_right = 362.0
margin_bottom = 590.0
rect_rotation = 180.0
rect_pivot_offset = Vector2( 60, 90 )
focus_neighbour_left = NodePath("../BAttacker")
focus_neighbour_top = NodePath("../WEquip1")
focus_neighbour_right = NodePath("../BGraveyard")
focus_neighbour_bottom = NodePath("../BR3")
focus_next = NodePath("../BGraveyard")
focus_previous = NodePath("../BAttacker")
flat = true

[node name="BR1" type="Button" parent="BoardImage/CardSpots/NonHands"]
margin_left = 529.0
margin_top = 207.0
margin_right = 649.0
margin_bottom = 387.0
rect_rotation = 180.0
rect_pivot_offset = Vector2( 60, 90 )
focus_neighbour_left = NodePath("../BTech")
focus_neighbour_top = NodePath("../BEquip1")
focus_neighbour_right = NodePath("../BR2")
focus_neighbour_bottom = NodePath("../BTrap1")
focus_next = NodePath("../BR2")
focus_previous = NodePath("../BTech")
flat = true

[node name="BR2" type="Button" parent="BoardImage/CardSpots/NonHands"]
margin_left = 385.0
margin_top = 207.0
margin_right = 505.0
margin_bottom = 387.0
rect_rotation = 180.0
rect_pivot_offset = Vector2( 60, 90 )
focus_neighbour_left = NodePath("../BR1")
focus_neighbour_top = NodePath("../BAttacker")
focus_neighbour_right = NodePath("../BR3")
focus_neighbour_bottom = NodePath("../BTrap2")
focus_next = NodePath("../BR3")
focus_previous = NodePath("../BR1")
flat = true

[node name="BR3" type="Button" parent="BoardImage/CardSpots/NonHands"]
margin_left = 242.0
margin_top = 207.0
margin_right = 362.0
margin_bottom = 387.0
rect_rotation = 180.0
rect_pivot_offset = Vector2( 60, 90 )
focus_neighbour_left = NodePath("../BR2")
focus_neighbour_top = NodePath("../BEquip2")
focus_neighbour_right = NodePath("../BMedBay")
focus_neighbour_bottom = NodePath("../BTrap3")
focus_next = NodePath("../BMedBay")
focus_previous = NodePath("../BR2")
flat = true

[node name="BTrap1" type="Button" parent="BoardImage/CardSpots/NonHands"]
margin_left = 529.0
margin_top = 6.0
margin_right = 649.0
margin_bottom = 186.0
rect_rotation = 180.0
rect_pivot_offset = Vector2( 60, 90 )
focus_neighbour_left = NodePath("../BTechDeck")
focus_neighbour_top = NodePath("../BR1")
focus_neighbour_right = NodePath("../BTrap2")
focus_neighbour_bottom = NodePath("../../BHandScroller/BHand")
focus_next = NodePath("../BTrap2")
focus_previous = NodePath("../BTechDeck")
flat = true

[node name="BTrap2" type="Button" parent="BoardImage/CardSpots/NonHands"]
margin_left = 385.0
margin_top = 6.0
margin_right = 505.0
margin_bottom = 186.0
rect_rotation = 180.0
rect_pivot_offset = Vector2( 60, 90 )
focus_neighbour_left = NodePath("../BTrap1")
focus_neighbour_top = NodePath("../BR2")
focus_neighbour_right = NodePath("../BTrap3")
focus_neighbour_bottom = NodePath("../../BHandScroller/BHand")
focus_next = NodePath("../BTrap3")
focus_previous = NodePath("../BTrap1")
flat = true

[node name="BTrap3" type="Button" parent="BoardImage/CardSpots/NonHands"]
margin_left = 242.0
margin_top = 6.0
margin_right = 362.0
margin_bottom = 186.0
rect_rotation = 180.0
rect_pivot_offset = Vector2( 60, 90 )
focus_neighbour_left = NodePath("../BTrap2")
focus_neighbour_top = NodePath("../BR3")
focus_neighbour_right = NodePath("../BMainDeck")
focus_neighbour_bottom = NodePath("../../BHandScroller/BHand")
focus_next = NodePath("../BMainDeck")
focus_previous = NodePath("../BTrap2")
flat = true

[node name="BTech" type="Button" parent="BoardImage/CardSpots/NonHands"]
margin_left = 740.0
margin_top = 207.0
margin_right = 860.0
margin_bottom = 387.0
rect_rotation = 180.0
rect_pivot_offset = Vector2( 60, 90 )
focus_neighbour_left = NodePath("../BGraveyard")
focus_neighbour_top = NodePath("../BBanished")
focus_neighbour_right = NodePath("../BR1")
focus_neighbour_bottom = NodePath("../BTechDeck")
focus_next = NodePath("../BR1")
focus_previous = NodePath("../BGraveyard")
flat = true

[node name="BTechDeck" type="Button" parent="BoardImage/CardSpots/NonHands"]
margin_left = 740.0
margin_top = 6.0
margin_right = 860.0
margin_bottom = 186.0
rect_rotation = 180.0
rect_pivot_offset = Vector2( 60, 90 )
focus_neighbour_left = NodePath("../BMedBay")
focus_neighbour_top = NodePath("../BTech")
focus_neighbour_right = NodePath("../BTrap1")
focus_neighbour_bottom = NodePath("../../BHandScroller/BHand")
focus_next = NodePath("../BTrap1")
focus_previous = NodePath("../BMedBay")
flat = true

[node name="BMedBay" type="Button" parent="BoardImage/CardSpots/NonHands"]
margin_left = 31.0
margin_top = 207.0
margin_right = 151.0
margin_bottom = 387.0
rect_rotation = 180.0
rect_pivot_offset = Vector2( 60, 90 )
focus_neighbour_left = NodePath("../BR3")
focus_neighbour_top = NodePath("../BGraveyard")
focus_neighbour_right = NodePath("../../../../BoardScroller")
focus_neighbour_bottom = NodePath("../BMainDeck")
focus_next = NodePath("../BTechDeck")
focus_previous = NodePath("../BR3")
flat = true

[node name="BMainDeck" type="Button" parent="BoardImage/CardSpots/NonHands"]
margin_left = 31.0
margin_top = 6.0
margin_right = 151.0
margin_bottom = 186.0
rect_rotation = 180.0
rect_pivot_offset = Vector2( 60, 90 )
focus_neighbour_left = NodePath("../BTrap3")
focus_neighbour_top = NodePath("../BGraveyard")
focus_neighbour_right = NodePath("../../../../BoardScroller")
focus_neighbour_bottom = NodePath("../../BHandScroller/BHand")
focus_next = NodePath("../WMainDeck")
focus_previous = NodePath("../BTrap3")
flat = true

[node name="BBanished" type="Button" parent="BoardImage/CardSpots/NonHands"]
margin_left = 741.0
margin_top = 410.0
margin_right = 861.0
margin_bottom = 590.0
rect_rotation = 90.0
rect_pivot_offset = Vector2( 60, 90 )
focus_neighbour_left = NodePath("../WBanished")
focus_neighbour_top = NodePath("../WGraveyard")
focus_neighbour_right = NodePath("../BEquip1")
focus_neighbour_bottom = NodePath("../BTech")
focus_next = NodePath("../BEquip1")
focus_previous = NodePath("../WBanished")
flat = true

[node name="BGraveyard" type="Button" parent="BoardImage/CardSpots/NonHands"]
margin_left = 31.0
margin_top = 411.0
margin_right = 151.0
margin_bottom = 591.0
rect_rotation = -90.0
rect_pivot_offset = Vector2( 60, 90 )
focus_neighbour_left = NodePath("../BEquip2")
focus_neighbour_top = NodePath("../WBanished")
focus_neighbour_right = NodePath("../../../../BoardScroller")
focus_neighbour_bottom = NodePath("../BMedBay")
focus_next = NodePath("../BTech")
focus_previous = NodePath("../BEquip2")
flat = true

[node name="SwitchSides" type="TextureButton" parent="BoardImage"]
margin_left = 836.0
margin_top = 807.0
margin_right = 950.0
margin_bottom = 921.0
hint_tooltip = "Flips the board."
texture_normal = ExtResource( 6 )
expand = true

[node name="BoardScroller" type="VScrollBar" parent="."]
margin_left = 1908.0
margin_right = 1920.0
margin_bottom = 1080.0
hint_tooltip = "Controls board position."
max_value = 648.0
value = 648.0
rounded = true

[node name="CardExaminer" type="Container" parent="."]
margin_left = 67.0
margin_top = 67.0
margin_right = 697.0
margin_bottom = 1012.0

[node name="LargeEmptySlot" type="Sprite" parent="CardExaminer"]
texture = ExtResource( 5 )
centered = false

[node name="BigCard" parent="CardExaminer" instance=ExtResource( 3 )]
script = ExtResource( 2 )

[connection signal="pressed" from="BoardImage/CardSpots/NonHands/WAttacker" to="BoardImage" method="_on_WAttacker_pressed"]
[connection signal="pressed" from="BoardImage/CardSpots/NonHands/WEquip1" to="BoardImage" method="_on_WEquip1_pressed"]
[connection signal="pressed" from="BoardImage/CardSpots/NonHands/WEquip2" to="BoardImage" method="_on_WEquip2_pressed"]
[connection signal="pressed" from="BoardImage/CardSpots/NonHands/WR1" to="BoardImage" method="_on_WR1_pressed"]
[connection signal="pressed" from="BoardImage/CardSpots/NonHands/WR2" to="BoardImage" method="_on_WR2_pressed"]
[connection signal="pressed" from="BoardImage/CardSpots/NonHands/WR3" to="BoardImage" method="_on_WR3_pressed"]
[connection signal="pressed" from="BoardImage/CardSpots/NonHands/WTrap1" to="BoardImage" method="_on_WTrap1_pressed"]
[connection signal="pressed" from="BoardImage/CardSpots/NonHands/WTrap2" to="BoardImage" method="_on_WTrap2_pressed"]
[connection signal="pressed" from="BoardImage/CardSpots/NonHands/WTrap3" to="BoardImage" method="_on_WTrap3_pressed"]
[connection signal="pressed" from="BoardImage/CardSpots/NonHands/WTech" to="BoardImage" method="_on_WTech_pressed"]
[connection signal="pressed" from="BoardImage/CardSpots/NonHands/WTechDeck" to="BoardImage" method="_on_WTechDeck_pressed"]
[connection signal="pressed" from="BoardImage/CardSpots/NonHands/WMedBay" to="BoardImage" method="_on_WMedBay_pressed"]
[connection signal="pressed" from="BoardImage/CardSpots/NonHands/WMainDeck" to="BoardImage" method="_on_WMainDeck_pressed"]
[connection signal="pressed" from="BoardImage/CardSpots/NonHands/WBanished" to="BoardImage" method="_on_WBanished_pressed"]
[connection signal="pressed" from="BoardImage/CardSpots/NonHands/WGraveyard" to="BoardImage" method="_on_WGraveyard_pressed"]
[connection signal="pressed" from="BoardImage/CardSpots/NonHands/BAttacker" to="BoardImage" method="_on_BAttacker_pressed"]
[connection signal="pressed" from="BoardImage/CardSpots/NonHands/BEquip1" to="BoardImage" method="_on_BEquip1_pressed"]
[connection signal="pressed" from="BoardImage/CardSpots/NonHands/BEquip2" to="BoardImage" method="_on_BEquip2_pressed"]
[connection signal="pressed" from="BoardImage/CardSpots/NonHands/BR1" to="BoardImage" method="_on_BR1_pressed"]
[connection signal="pressed" from="BoardImage/CardSpots/NonHands/BR2" to="BoardImage" method="_on_BR2_pressed"]
[connection signal="pressed" from="BoardImage/CardSpots/NonHands/BR3" to="BoardImage" method="_on_BR3_pressed"]
[connection signal="pressed" from="BoardImage/CardSpots/NonHands/BTrap1" to="BoardImage" method="_on_BTrap1_pressed"]
[connection signal="pressed" from="BoardImage/CardSpots/NonHands/BTrap2" to="BoardImage" method="_on_BTrap2_pressed"]
[connection signal="pressed" from="BoardImage/CardSpots/NonHands/BTrap3" to="BoardImage" method="_on_BTrap3_pressed"]
[connection signal="pressed" from="BoardImage/CardSpots/NonHands/BTech" to="BoardImage" method="_on_BTech_pressed"]
[connection signal="pressed" from="BoardImage/CardSpots/NonHands/BTechDeck" to="BoardImage" method="_on_BTechDeck_pressed"]
[connection signal="pressed" from="BoardImage/CardSpots/NonHands/BMedBay" to="BoardImage" method="_on_BMedBay_pressed"]
[connection signal="pressed" from="BoardImage/CardSpots/NonHands/BMainDeck" to="BoardImage" method="_on_BMainDeck_pressed"]
[connection signal="pressed" from="BoardImage/CardSpots/NonHands/BBanished" to="BoardImage" method="_on_BBanished_pressed"]
[connection signal="pressed" from="BoardImage/CardSpots/NonHands/BGraveyard" to="BoardImage" method="_on_BGraveyard_pressed"]
[connection signal="pressed" from="BoardImage/SwitchSides" to="BoardImage" method="_on_SwitchSides_pressed"]
[connection signal="value_changed" from="BoardScroller" to="BoardImage" method="_on_VScrollBar_value_changed"]
[connection signal="focus_entered" from="CardExaminer" to="CardExaminer/BigCard" method="_on_CardExaminer_focus_entered"]
[connection signal="mouse_entered" from="CardExaminer" to="CardExaminer/BigCard" method="_on_CardExaminer_mouse_entered"]
